2005-08-29  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: merged in patch for dbname bug I
	  introduced in the previous change.

2005-08-02  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: merged in patch for mlock() on redhat
	  FC3 that prevented the secure ram from being
	  utilized.
	* pwsafe: added functionality suggested by patch:
	  PWSAFE_DATABASE environment variable overrides
	  default $HOME/.pwsafe.dat

2005-07-31  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: fixed swapo in help text displayed
	  during random password generation. Improved
	  the grammer too.

2005-06-30  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: reversed order of notes and u/p
	  when doing a "-l(u|p)" operation and
	  outout is not going to the console.
	* pwsafe: fixed typo in --help text.
	* pwsafe: reworked test scripts so they
	  require sh rather than bash2. So now they
	  run on platforms with only sh. Also made
	  them work with pwsafe when build with
	  --disable-readline.

2005-06-11  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: reversed sense of diff output
	  during merge so -- and ++ make sense.
	* pwsafe: went through and cleaned up
	  compile warnings generated by -Wall.

2005-04-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: fixed segv in readline() when saved
	  is empty.

2005-03-13  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: removed selftest script and created
	  a new dir test/ for holding unit tests.
	  Added a number of unit tests.

2005-03-11  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: g++ 3.4.2 changed the interface from the
	  basic_string<> class to its allocator for the 3rd
	  time. Had enough with chasing non-standards, and
	  instead implemented secstring class myself.

2005-03-08  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: when doing a --mergedb, try the passphrase
	  of the 1st database when opening the 2nd one
	  before prompting the user.
	