@@ -1,3 +1,9 @@
+2005-09-30  Nicolas S. Dade  <ndade@nsd.dyndns.org>
+
+	* pwsafe: corrected trim of name|login when
+          name or login were entirely composed of
+          whitespace.
+
 2005-08-29  Nicolas S. Dade  <ndade@nsd.dyndns.org>
 
 	* pwsafe: merged in patch for dbname bug I
